# DrawingApp

./: .gitignore
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  img_to_code.cpp  img_to_code.h  main.cpp  native-lib.cpp  preprocess.cpp  preprocess.h
app/src/main/cpp/potrace/: backend_code.c  backend_code.h  backend_svg.c  backend_svg.h  config.h  decompose.c  greymap.c  info.c  potracelib.c  trans.c
app/src/main/java/com/example/drawingapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: nfc_tech_filter.xml
gradle/wrapper/: gradle-wrapper.properties
